# it-management

./: .gitignore  Cargo.toml  Dioxus.toml  Makefile  command.rs  package-lock.json  package.json  tailwind.config.js
.clinerules/: findMachineShare.md
assets/: tailwind.css
assets/styling/: blog.css  main.css  navbar.css
scripts/: ssh_script.sh
src/: lib.rs  main.rs  routes.rs
src/components/: mod.rs  navbar.rs
src/configs/: env_validate.rs  mod.rs
src/error/: mod.rs  network.rs
src/server/: command.rs  mod.rs  resolve_computer.rs
src/server/command/: license.rs  mod.rs  network.rs
src/server/license/: checker.rs  mod.rs  types.rs
src/server/network/: mod.rs  scan.rs  ssh.rs
src/tests/: lib.rs  mod.rs
src/tests/command/: concurrent.rs  dns.rs  license.rs  mod.rs
src/tests/common/: mocks.rs  mod.rs
src/tests/resolve_computer/: basic_info.rs  computer_info.rs  mod.rs  parsing.rs
src/utils/: mod.rs  theme_state.rs
src/views/: home.rs  mod.rs  user.rs  user_list.rs
