[package]
name = "it_management"
version = "0.1.0"
authors = ["fluke"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
dioxus_server_macro = "0.6.1"
log = "0.4.27"
dioxus = { version = "0.6.1", features = [
    "router",
    "fullstack",
    "signals",
    "hooks",
] }

web-sys = { version = "0.3.77", features = [
    "console",
    "Document",
    "Element",
    "DomTokenList",
    "Window",
    "HtmlElement",
    "Window"
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
env_logger = "0.11.8"
console_log = "1.0"
regex = "1.10.2"
dotenv = "0.15.0"
futures = "0.3"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
tempfile = "3.10"
shell-escape = "0.1.5"
lazy_static = "1.4.0"
[features]
default = ["web"]
native = []
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
